<resources>
    <string name="app_name">covid-19tracker</string>
    <string name="name_covid_19">COVID-19</string>
    <string name="about">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.</string>
    <string name="brand_name">CODING VIZON</string>
    <string name="infected">INFECTED</string>
    <string name="cases">4621684</string>
    <string name="about_symptoms">Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without requiring special treatment.\n  Older people, and those with underlying medical problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness.</string>
    <string name="about_precautions">The best way to prevent and slow down transmission is be well informed about the COVID-19 virus, the disease it causes and how it spreads.\n Protect yourself and others from infection by washing your hands or using an alcohol based rub frequently and not touching your face.</string>
    <string name="how_it_spread">The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs or sneezes, so it’s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow).</string>
    <string name="recovery">At this time, there are no specific vaccines or treatments for COVID-19. However, there are many ongoing clinical trials evaluating potential treatments.\n WHO will continue to provide updated information as soon as clinical findings become available.</string>
    <string name="brandname">TODO</string>
    <string name="from">from</string>
    <string name="coding_vizon">CODING VIZON</string>
    <string name="recovered">RECOVERED</string>
    <string name="_23564">23564</string>
    <string name="deceased">DECEASED</string>
    <string name="symptoms">Symptoms</string>
    <string name="to_know_more_about_covid_19">To know more about COVID-19</string>
    <string name="more_info">More Info</string>
    <string name="view_all">view all</string>
    <string name="stay_home">Stay Home</string>
    <string name="dry_cough">Dry Cough</string>
    <string name="about_dry_cough">about dry cough</string>
    <string name="precautions">Precautions</string>
    <string name="coronavirus">CORONAVIRUS ?</string>
    <string name="spread">HOW IT SPREAD ?</string>
    <string name="treatment">TREATMENT ?</string>
    <string name="learn_more">Learn More</string>
    <string name="title_activity_navbar_activity">navbar_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


</resources>